--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/images/logo.png" alt="SEMOC Logo" height="50" class="d-inline-block align-text-top" >
+                    <img src="./images/logo.png" alt="SEMOC Logo" height="50" class="d-inline-block align-text-top" >
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -62,10 +62,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">INICIO</a>
+                            <a class="nav-link" href="./index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/semoc.html">SEMOC</a>
+                            <a class="nav-link" href="./semoc.html">SEMOC</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">PROGRAMAÇÃO</a>
