--- a/semoc.html
+++ b/semoc.html
@@ -22,11 +22,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Favicons -->
-<link rel="apple-touch-icon" href="/images/favicon.png" sizes="180x180">
-<link rel="icon" href="/images/favicon.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/images/favicon.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/manifest.json">
-<link rel="icon" href="/images/favicon.png">
+<link rel="apple-touch-icon" href="./images/favicon.png" sizes="180x180">
+<link rel="icon" href="./images/favicon.png" sizes="32x32" type="image/png">
+<link rel="icon" href="./images/favicon.png" sizes="16x16" type="image/png">
+<link rel="manifest" href="./manifest.json">
+<link rel="icon" href="./images/favicon.png">
 <meta name="theme-color" content="#7952b3">
 
 
