--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                 <ul class="list-unstyled mb-0">
                     <li>
                         <p class="text-white mb-0">Universidade Católica do Salvador</p>
-                        <p class="text-white mb-0">Av. Cardeal da Silva, 205</p>
-                        <p class="text-white mb-0">Federação, Salvador - BA, 40231-170</p>
+                        <p class="text-white mb-0">Av. Prof. Pinto de Aguiar, 2589</p>
+                        <p class="text-white mb-0">Pituaçu, Salvador - BA, 41740-090</p>
                     </li>
                     <li>
                         <a href="mailto:contato@ucsal.br" class="text-white">contato@ucsal.br</a>
