Adicionando contagem de segundos ao relógio

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                     <div class="time"><span>${days}</span><span> Dias</span></div>
                     <div class="time"><span>${hours}</span><span> Horas</span></div>
                     <div class="time"><span>${minutes}</span><span> Minutos</span></div>
+                    <div class="time"><span>${seconds}</span><span> Segundos</span></div>
                 `;
             }
 
