--- a/semoc.html
+++ b/semoc.html
@@ -106,6 +106,55 @@
                 <p class="mb-0">A tecnociência, bem orientada, pode produzir coisas realmente valiosas para melhorar a qualidade de vida do ser humano [...] nos dão um poder tremendo. Ou melhor: dão, àqueles que detêm o conhecimento e sobretudo o poder econômico para o desfrutar, um domínio impressionante sobre o conjunto do gênero humano e do mundo inteiro. Nunca a humanidade teve tanto poder sobre si mesma, e nada garante que o utilizará bem [...] A verdade é que ‘o homem moderno não foi educado para o reto uso do poder’ [...] A sua liberdade adoece, quando se entrega às forças cegas do inconsciente, das necessidades imediatas, do egoísmo, da violência brutal [...] carece de uma ética sólida, uma cultura e uma espiritualidade que lhe ponham realmente um limite e o contenham dentro de um lúcido domínio de si. (FRANCISCO, 2015, LS 103-105).</p>
             </blockquote>
         </section>
+
+              <section>
+            <h2>Datas Importantes</h2>
+            <div class="d-flex flex-wrap">
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Cadastro Pareceristas</h5>
+                        <p class="card-text">17/08/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Inscreva-se</a>
+                    </div>
+                </div>
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Submissão de Artigos</h5>
+                        <p class="card-text">17/08/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                    </div>
+                </div>
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Submissão de Mini Cursos</h5>
+                        <p class="card-text">01/09/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                    </div>
+                </div>
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Submissão de Mesas Redondas</h5>
+                        <p class="card-text">01/09/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                    </div>
+                </div>
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Submissão de Mesas da Jornada de Pesquisa</h5>
+                        <p class="card-text">01/09/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                    </div>
+                </div>
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Submissão de Mesas no Fórum de Projetos de Extensão</h5>
+                        <p class="card-text">01/09/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
         
 
