--- a/index.html
+++ b/index.html
@@ -85,6 +85,53 @@
                 <p>Data do evento: De 21 a 25 de Outubro</p>
             </div>
         </section>
+                    <section>
+            <h2>Datas Importantes</h2>
+            <div class="d-flex flex-wrap">
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Cadastro Pareceristas</h5>
+                        <p class="card-text">17/08/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Inscreva-se</a>
+                    </div>
+                </div>
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Submissão de Artigos</h5>
+                        <p class="card-text">17/08/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                    </div>
+                </div>
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Submissão de Mini Cursos</h5>
+                        <p class="card-text">01/09/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                    </div>
+                </div>
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Submissão de Mesas Redondas</h5>
+                        <p class="card-text">01/09/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                    </div>
+                </div>
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Submissão de Mesas da Jornada de Pesquisa</h5>
+                        <p class="card-text">01/09/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                    </div>
+                </div>
+                <div class="card m-2 p-2 flex-fill">
+                    <div class="card-body">
+                        <h5 class="card-title">Submissão de Mesas no Fórum de Projetos de Extensão</h5>
+                        <p class="card-text">01/09/2024</p>
+                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="presentation-section" id="semoc">
             <div class="container">
