--- a/index.html
+++ b/index.html
@@ -85,53 +85,59 @@
                 <p>Data do evento: De 21 a 25 de Outubro</p>
             </div>
         </section>
-                    <section>
-            <h2>Datas Importantes</h2>
-            <div class="d-flex flex-wrap">
-                <div class="card m-2 p-2 flex-fill">
-                    <div class="card-body">
-                        <h5 class="card-title">Cadastro Pareceristas</h5>
-                        <p class="card-text">17/08/2024</p>
-                        <a href="http://pinakes.com.br/" class="btn btn-primary">Inscreva-se</a>
-                    </div>
-                </div>
-                <div class="card m-2 p-2 flex-fill">
-                    <div class="card-body">
-                        <h5 class="card-title">Submissão de Artigos</h5>
-                        <p class="card-text">17/08/2024</p>
-                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
-                    </div>
-                </div>
-                <div class="card m-2 p-2 flex-fill">
-                    <div class="card-body">
-                        <h5 class="card-title">Submissão de Mini Cursos</h5>
-                        <p class="card-text">01/09/2024</p>
-                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
-                    </div>
-                </div>
-                <div class="card m-2 p-2 flex-fill">
-                    <div class="card-body">
-                        <h5 class="card-title">Submissão de Mesas Redondas</h5>
-                        <p class="card-text">01/09/2024</p>
-                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
-                    </div>
-                </div>
-                <div class="card m-2 p-2 flex-fill">
-                    <div class="card-body">
-                        <h5 class="card-title">Submissão de Mesas da Jornada de Pesquisa</h5>
-                        <p class="card-text">01/09/2024</p>
-                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
-                    </div>
-                </div>
-                <div class="card m-2 p-2 flex-fill">
-                    <div class="card-body">
-                        <h5 class="card-title">Submissão de Mesas no Fórum de Projetos de Extensão</h5>
-                        <p class="card-text">01/09/2024</p>
-                        <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
-                    </div>
+Aqui está o trecho de código atualizado para centralizar o título "Datas Importantes" e melhorar a aparência dos cards usando Bootstrap 5:
+
+```html
+<section>
+    <div class="container">
+        <h2 class="text-center my-4">Datas Importantes</h2>
+        <div class="d-flex flex-wrap justify-content-center">
+            <div class="card m-3 shadow-sm" style="width: 18rem;">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Cadastro Pareceristas</h5>
+                    <p class="card-text">17/08/2024</p>
+                    <a href="http://pinakes.com.br/" class="btn btn-primary">Inscreva-se</a>
                 </div>
             </div>
-        </section>
+            <div class="card m-3 shadow-sm" style="width: 18rem;">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Submissão de Artigos</h5>
+                    <p class="card-text">17/08/2024</p>
+                    <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                </div>
+            </div>
+            <div class="card m-3 shadow-sm" style="width: 18rem;">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Submissão de Mini Cursos</h5>
+                    <p class="card-text">01/09/2024</p>
+                    <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                </div>
+            </div>
+            <div class="card m-3 shadow-sm" style="width: 18rem;">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Submissão de Mesas Redondas</h5>
+                    <p class="card-text">01/09/2024</p>
+                    <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                </div>
+            </div>
+            <div class="card m-3 shadow-sm" style="width: 18rem;">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Submissão de Mesas da Jornada de Pesquisa</h5>
+                    <p class="card-text">01/09/2024</p>
+                    <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                </div>
+            </div>
+            <div class="card m-3 shadow-sm" style="width: 18rem;">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Submissão de Mesas no Fórum de Projetos de Extensão</h5>
+                    <p class="card-text">01/09/2024</p>
+                    <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+```
 
         <section class="presentation-section" id="semoc">
             <div class="container">
