--- a/index.html
+++ b/index.html
@@ -134,8 +134,6 @@
         </div>
     </div>
 </section>
-```
-
         <section class="presentation-section" id="semoc">
             <div class="container">
                 <h2>Apresentação</h2>
@@ -171,6 +169,114 @@
             </div>
         </section>
 
+<section id="eixos-tematicos" class="accordion accordion-flush">
+  <div class="container">
+    <h2 class="text-center my-4">Eixos Temáticos</h2>
+    <div class="accordion" id="accordionEixosTematicos">
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingEthicsOfCare">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEthicsOfCare" aria-expanded="false" aria-controls="collapseEthicsOfCare">
+            A Ética do Cuidado
+          </button>
+        </h2>
+        <div id="collapseEthicsOfCare" class="accordion-collapse collapse" aria-labelledby="headingEthicsOfCare" data-bs-parent="#accordionEixosTematicos">
+          <div class="accordion-body">
+            <p>Tendo em vista o fato de que é o Direito uma pauta ética mínima, consistente em um conjunto de valores dos quais a sociedade não pode prescindir, sob pena de viver em permanente estado caótico, esse eixo temático do campo jurídico tem por objetivo oportunizar a apresentação de pesquisas jurídicas afetas ao ethos do cuidado, razão de existir sistemas jurídicos, posto ser este um objetivo incontornável à proteção da humanidade e de meio ambiente em suas múltiplas dimensões.</p>
+            <p>É nesse ínterim que se apresenta a promessa não cumprida da solidariedade, cujos reflexos podem adquirir contornos importantes a partir do desenvolvimento da ética do cuidado, mediante o fomento de uma cultura comportamental advinda de variados campos do Direito, a exemplo do Direito Constitucional, Direito Civil (Família, Responsabilidade Civil), Direito da Seguridade Social, Direito Ambiental, Direito Sanitário, Direito Tributário e Financeiro, Direito Penal (Co-culpabilidade, Justiça Restaurativa), Direito Processual (Mediação, Conciliação), Direito Digital e demais segmentos do agir humano que demandam regramento, sob a orientação da ética do cuidar do outro, tema central desta SEMOC.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingHealthCare">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseHealthCare" aria-expanded="false" aria-controls="collapseHealthCare">
+            A Experiência do Cuidar na Saúde
+          </button>
+        </h2>
+        <div id="collapseHealthCare" class="accordion-collapse collapse" aria-labelledby="headingHealthCare" data-bs-parent="#accordionEixosTematicos">
+          <div class="accordion-body">
+            <p>Entendendo saúde e adoecimento como formas pelas quais a vida se manifesta, sendo influenciados pelas condições biológicas, do meio ambiente, do estilo de vida, do acesso ao lazer e aos serviços de saúde, eles refletem a conjuntura social, política, econômica e cultural, sendo portanto, experiências únicas vivenciadas por cada pessoa de modo diferente (SCLIAR, 2007; CZERESNIA, 1999). Os cuidados com a saúde devem ser valorizados não apenas pelo seu papel na biologia da doença, mas também por mobilizarem afetos nas relações estabelecidas entre cuidador e quem exerce o cuidado.</p>
+            <p>Os profissionais cuidadores da saúde realizam estratégias terapêuticas farmacológicas, psicoterápicas, educativas e sociais com o intuito de promover experiências exitosas na promoção, na proteção e no diagnóstico precoce, limitação da incapacidade e na reabilitação, objetivando melhor exercer o cuidar. A proposta deste eixo é convidar à exposição, reflexão e debate, de modo interdisciplinar, experiências advindas do cuidar amplo e permanente.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTechInnovation">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTechInnovation" aria-expanded="false" aria-controls="collapseTechInnovation">
+            Cuidado, Tecnologias e Inovação
+          </button>
+        </h2>
+        <div id="collapseTechInnovation" class="accordion-collapse collapse" aria-labelledby="headingTechInnovation" data-bs-parent="#accordionEixosTematicos">
+          <div class="accordion-body">
+            <p>Vivemos atualmente uma rápida transformação do uso das tecnologias o que nos leva a repensar seu papel e da inovação em atividades relacionadas ao cuidado principalmente na área da saúde e da assistência social. Para Rocha et al (2008) refletir acerca do cuidado na perspectiva da tecnologia nos leva a repensar a inerente capacidade do ser humano em buscar inovações capazes de transformar seu cotidiano, visando uma melhor qualidade de vida e satisfação pessoal. Nesse sentido, a tecnologia pode ser entendida através da utilização de teorias, métodos e processos científicos, para solução de problemas técnicos.</p>
+            <p>A proposta deste eixo é mostrar como a inovação tecnológica pode ajudar na transformação das práticas de cuidado e assistência com o desenvolvimento de novas tecnologias, ferramentas, dispositivos e sistemas voltados para melhorar serviços de saúde e de assistência social.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingFamilyCare">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFamilyCare" aria-expanded="false" aria-controls="collapseFamilyCare">
+            Família e Cuidado
+          </button>
+        </h2>
+        <div id="collapseFamilyCare" class="accordion-collapse collapse" aria-labelledby="headingFamilyCare" data-bs-parent="#accordionEixosTematicos">
+          <div class="accordion-body">
+            <p>O cuidado é inerente ao ser humano, está ligado à atividade, à vida. Todos somos beneficiários ou provedores do cuidado, portanto, dependentes. O cuidado tem suas raízes na família, lugar de referência para a intimidade, a afetividade e a segurança. É na família que se estabelece a primeira relação entre quem cuida e quem é cuidado. Há, no cuidado familiar, um universo relacional muito amplo, direcionado a animais, pessoas, plantas e objetos, com mobilização de afetos e significados. Por ser agente de proteção e cuidado, a família precisa também ser cuidada, visto que, diante das transformações demográficas e socioeconômicas, que geram o empobrecimento, a violência, o desemprego, ela poderá ser incapaz de exercer o cuidado.</p>
+            <p>Diante do exposto, e, por entendermos ser esta uma temática fundamental, a proposta deste eixo é convidar à reflexão e ao debate, de modo interdisciplinar, a família e o cuidado.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingEnvironmentCare">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEnvironmentCare" aria-expanded="false" aria-controls="collapseEnvironmentCare">
+            Meio Ambiente e Cuidado
+          </button>
+        </h2>
+        <div id="collapseEnvironmentCare" class="accordion-collapse collapse" aria-labelledby="headingEnvironmentCare" data-bs-parent="#accordionEixosTematicos">
+          <div class="accordion-body">
+            <p>Entende-se meio ambiente como o somatório das condições externas circundantes no interior das quais um organismo, uma condição, uma comunidade ou um objeto existe (ART, 1998). Nesse contexto, a gestão das atividades econômicas e industriais vem se tornando um dos principais problemas para o meio ambiente, devido à expansão das demandas por bens e serviços. Essa lógica gera passivos ambientais e contribui para o aumento dos dados alarmantes sobre emprego e pobreza no mundo, conforme alerta o relatório sobre empregos e erradicação da pobreza da Organização das Nações Unidas (ONU, 2021). Cuidar do Meio Ambiente para obter sustentabilidade nas organizações e nos negócios, nas matas, nos mares, nos rios, nas florestas, no solo, na fauna e na flora, na atmosfera, nas cidades e nos campos é Cuidar do Mundo.</p>
+            <p>Imprescindível a abertura de debates sobre o avanço de negócios dominados por um modelo linear de produção e consumo, no qual as mercadorias são produzidas no intuito de beneficiar o capital. Aqui busca-se investigar e discutir temas relevantes sobre medidas socioambientais e de planejamento de negócios dinâmicos, inclusivos, resilientes e inovadores, tais como: as condições de vida associadas à contaminação decorrente da produção e descarte de produtos; as mudanças requeridas diante do profundo problema de extração insustentável dos recursos naturais; a gestão de modelos de negócios sustentáveis; a circularidade da economia que encoraje inovações e justiça social; a mudança climática; a “inteligência” artificial que apoie a oferta de serviços públicos com equidade; a implementação de tecnologias inovadoras no projeto e na construção de edificações e de infraestrutura urbana.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingSocialRights">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSocialRights" aria-expanded="false" aria-controls="collapseSocialRights">
+            O Cuidado como Direito Social
+          </button>
+        </h2>
+        <div id="collapseSocialRights" class="accordion-collapse collapse" aria-labelledby="headingSocialRights" data-bs-parent="#accordionEixosTematicos">
+          <div class="accordion-body">
+            <p>Direitos Sociais são os direitos que visam garantir aos indivíduos o exercício e usufruto de direitos fundamentais em condições de igualdade, para que tenham uma vida digna por meio da proteção e garantias dadas pelo estado de direito, e levam em consideração os direitos fundamentais que toda a sociedade desfruta.</p>
+            <p>Imprescindível a abertura de debates sobre como podemos favorecer o cuidado com o outro, com a sociedade e consigo mesmo, enquanto cidadãos, como forma de atuação enquanto pertença de uma sociedade. A questão do cuidado expressa os próprios limites das sociedades capitalistas em relação à sustentabilidade da vida humana, tendo em vista que a vida e as necessidades humanas não são preocupações centrais da ordem capitalista. Visando detectar avanços no campo da política social, que vem reconhecendo o cuidado como um direito e a premência de se pensar de modo mais equitativo a distribuição da responsabilidade do cuidado.</p>
+            <p>A proposta deste eixo é convidar à exposição, reflexão e debate, de modo interdisciplinar, experiências advindas do cuidar amplo e permanente.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingUrbanIssues">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUrbanIssues" aria-expanded="false" aria-controls="collapseUrbanIssues">
+            O Cuidado e as Questões Urbanas
+          </button>
+        </h2>
+        <div id="collapseUrbanIssues" class="accordion-collapse collapse" aria-labelledby="headingUrbanIssues" data-bs-parent="#accordionEixosTematicos">
+          <div class="accordion-body">
+            <p>O cuidado é deve ser uma atividade humana de todos os dias, pois o homem sempre vai depender do cuidado de outro(s) para sobreviver e suprir necessidades. No entanto, pouco se discute sobre o cuidado e como ele se manifesta para além dos espaços, práticas, e campos do saber tradicionalmente vinculados a ele. Se faz necessário desenvolver perspectivas teóricas e práticas do cuidado como uma das estratégias para promover cidades mais solidárias, inclusivas, justas e cuidadosas (NASCIMENTO et al, 2023).</p>
+            <p>Vivemos atualmente em nossas cidades um contexto de falta de um planejamento urbano que controle a destruição do meio-ambiente e amenize as desigualdades sociais no espaço urbano. Olhar as questões urbanas a partir das perspectivas do cuidado pode ajudar no desenvolvimento de processos urbanos mais democráticos e equitativos.</p>
+            <p>A proposta deste eixo é discutir como o cuidado pode alcançar as questões urbanas contemporâneas.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 
     </main>
@@ -224,7 +330,6 @@
     </div>
 </footer>
 
-    <!-- AOS Library -->
     <!-- AOS Library -->
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
