--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
             </div>
         </section>
 
-<section id="eixos-tematicos" class="accordion accordion-flush">
+
+<section id="eixos-tematicos" class="mb-3" >
   <div class="container">
     <h2 class="text-center my-4">Eixos Temáticos</h2>
-    <div class="accordion" id="accordionEixosTematicos">
-
+    <div class="accordiona ccordion-flush" id="accordionEixosTematicos">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingEthicsOfCare">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEthicsOfCare" aria-expanded="false" aria-controls="collapseEthicsOfCare">
