--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
             <div class="card m-3 shadow-sm" style="width: 18rem;">
                 <div class="card-body text-center">
                     <h5 class="card-title">Cadastro Pareceristas</h5>
-                    <p class="card-text">17/08/2024</p>
+                    <p class="card-text">
+                      <span style="text-decoration: line-through;">17/08/2024</span>
+                      <span style="color: red;">01/09/2024</span>
+                    </p>
                     <a href="http://pinakes.com.br/" class="btn btn-primary">Inscreva-se</a>
                 </div>
             </div>
