--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
                     <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
                 </div>
             </div>
+            <div class="card m-3 shadow-sm" style="width: 18rem;">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Inscrição Salão Interativo</h5>
+                    <p class="card-text">01/09/2024</p>
+                    <a href="http://pinakes.com.br/" class="btn btn-primary">Inscreva-se</a>
+                </div>
+            </div>
+          
         </div>
     </div>
 </section>
