--- a/index.html
+++ b/index.html
@@ -91,57 +91,11 @@
         <div class="d-flex flex-wrap justify-content-center">
             <div class="card m-3 shadow-sm" style="width: 18rem;">
                 <div class="card-body text-center">
-                    <h5 class="card-title">Cadastro Pareceristas</h5>
-                    <p class="card-text">
-                      <span style="text-decoration: line-through;">17/08/2024</span>
-                      <span style="color: red;">01/09/2024</span>
-                    </p>
-                    <a href="http://pinakes.com.br/" class="btn btn-primary">Inscreva-se</a>
-                </div>
-            </div>
-            <div class="card m-3 shadow-sm" style="width: 18rem;">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Submissão de Artigos</h5>
-                    <p class="card-text">
-                      <span style="text-decoration: line-through;">17/08/2024</span>
-                      <span style="color: red;">01/09/2024</span>
-                    </p>
-                    <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
-                </div>
-            </div>
-            <div class="card m-3 shadow-sm" style="width: 18rem;">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Submissão de Mini Cursos</h5>
-                    <p class="card-text">01/09/2024</p>
-                    <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
-                </div>
-            </div>
-            <div class="card m-3 shadow-sm" style="width: 18rem;">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Submissão de Mesas Redondas</h5>
-                    <p class="card-text">01/09/2024</p>
-                    <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
-                </div>
-            </div>
-            <div class="card m-3 shadow-sm" style="width: 18rem;">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Submissão de Mesas da Jornada de Pesquisa</h5>
-                    <p class="card-text">01/09/2024</p>
-                    <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
-                </div>
-            </div>
-            <div class="card m-3 shadow-sm" style="width: 18rem;">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Submissão de Mesas no Fórum de Projetos de Extensão</h5>
-                    <p class="card-text">01/09/2024</p>
-                    <a href="http://pinakes.com.br/" class="btn btn-primary">Submeta Aqui</a>
-                </div>
-            </div>
-            <div class="card m-3 shadow-sm" style="width: 18rem;">
-                <div class="card-body text-center">
                     <h5 class="card-title">Inscrição Salão Interativo</h5>
-                    <p class="card-text">01/09/2024</p>
-                    <a href="http://pinakes.com.br/" class="btn btn-primary">Inscreva-se</a>
+                      <span style="text-decoration: line-through;">01/09/2024</span>
+                      <span style="color: red;">01/09/2024</span>
+                    <p class="card-text">03/09/2024</p>
+                    <a href="https://pinakes.com.br/subsalao" class="btn btn-primary">Inscreva-se</a>
                 </div>
             </div>
           
