--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
                     <a href="https://pinakes.com.br/subsalao" class="btn btn-primary">Inscreva-se</a>
                 </div>
             </div>
+          <div class="card m-3 shadow-sm" style="width: 18rem;">
+      <div class="card-body text-center">
+          <h5 class="card-title">Inscrição para Venda e Lançamento de Livros</h5>
+          <span style="color: red;">Prazo até 30/09/2024</span>
+          <a href="https://forms.gle/Lr7kU3kZQQwSnUSs7" class="btn btn-primary">Inscreva-se</a>
+      </div>
+</div>
           
         </div>
     </div>
