--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
           <a href="https://forms.gle/Lr7kU3kZQQwSnUSs7" class="btn btn-primary">Inscreva-se</a>
       </div>
 </div>
-          
+          <div class="card m-3 shadow-sm" style="width: 18rem;">
+    <div class="card-body text-center">
+        <h5 class="card-title">Inscrição para Monitoria da 27ª SEMOC - UCSAL</h5>
+        <span style="color: red;">Prazo até 30/09/2024</span>
+        <a href="https://forms.gle/sH2yZeGTfGkyZhmm6" class="btn btn-primary">Inscreva-se</a>
+    </div>
+</div>
         </div>
     </div>
 </section>
