--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                             <a class="nav-link" href="#datas">DATAS</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#programacao">PROGRAMAÇÃO</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#semoc">APRESENTAÇÃO</a>
                         </li>
                         <li class="nav-item">
@@ -112,6 +115,27 @@
     </div>
 </div>
         </div>
+    </div>
+</section>
+      <section id="programacao" class="programacao-section">
+    <div class="container-fluid">
+        <h1>Programação SEMOC 2024</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card m-3 shadow-sm" style="width: 18rem;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Minicursos</h5>
+                        <p class="card-text">Confira os minicursos disponíveis durante a Semana de Mobilização Científica.</p>
+                        <span style="color: red;">Vagas limitadas</span>
+<!--                         <a href="#" class="btn btn-primary">Inscreva-se</a> -->
+                              <div class="text-center mt-4">
+            <a href="programacao_minicurso.pdf" class="btn btn-secondary" target="_blank">Baixar Programação Completa dos Minicursos (PDF)</a>
+        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </section>
         <section class="presentation-section" id="semoc">
