--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
 </section>
       <section id="programacao" class="programacao-section">
-    <div class="container-fluid">
+    <div class="container-fluid text-center" style="background-color: #007bff; color: white;">
         <h1>Programação SEMOC 2024</h1>
         <div class="row">
             <div class="col-md-4">
