--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
     </div>
 </section>
       <section id="programacao" class="programacao-section">
-    <div class="container-fluid text-center" style="background-color: #007bff; color: white;">
+    <div class="container-fluid text-center" style="background-color: #2d5080; color: white;">
         <h1>Programação SEMOC 2024</h1>
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="card m-3 shadow-sm" style="width: 18rem;">
                     <div class="card-body text-center">
