--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
     </div>
 </section>
       <section id="programacao" class="programacao-section">
-    <div class="container-fluid text-center" style="background-color: #2d5080; color: white;">
-        <h1>Programação SEMOC 2024</h1>
+    <div class="container-fluid text-center py-2" style="background-color: #2d5080; color: white;">
+        <h1>Programação SEMOC</h1>
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="card m-3 shadow-sm" style="width: 18rem;">
-                    <div class="card-body text-center">
+                    <div class="card-body text-center" style="color: black;">
                         <h5 class="card-title">Minicursos</h5>
                         <p class="card-text">Confira os minicursos disponíveis durante a Semana de Mobilização Científica.</p>
                         <span style="color: red;">Vagas limitadas</span>
