--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <section id="programacao" class="programacao-section">
     <div class="container-fluid text-center py-2" style="background-color: #2d5080; color: white;">
         <h1>Programação SEMOC</h1>
-        <div class="row justify-content-center">
+        <div class="d-flex flex-wrap justify-content-center">
             <div class="col-md-4">
                 <div class="card m-3 shadow-sm" style="width: 18rem;">
                     <div class="card-body text-center" style="color: black;">
