--- a/index.html
+++ b/index.html
@@ -111,19 +111,18 @@
     <div class="container-fluid text-center py-2" style="background-color: #2d5080; color: white;">
         <h1>Programação SEMOC</h1>
         <div class="d-flex flex-wrap justify-content-center">
-            <div class="col-md-4">
-                <div class="card m-3 shadow-sm" style="width: 18rem;">
-                    <div class="card-body text-center" style="color: black;">
-                        <h5 class="card-title">Minicursos</h5>
-                        <p class="card-text">Confira os minicursos disponíveis durante a Semana de Mobilização Científica.</p>
-                        <span style="color: red;">Vagas limitadas</span>
-<!--                         <a href="#" class="btn btn-primary">Inscreva-se</a> -->
-                              <div class="text-center mt-4">
-            <a href="programacao_minicurso.pdf" class="btn btn-secondary" target="_blank">Baixar Programação Completa dos Minicursos (PDF)</a>
-        </div>
-                    </div>
-                </div>
+          <div class="col-md-4">
+    <div class="card m-3 shadow-sm" style="width: 18rem;">
+        <div class="card-body text-center" style="color: black;">
+            <h5 class="card-title">Programação SEMOC</h5>
+            <p class="card-text">Confira a programação completa da 27ª Semana de Mobilização Científica - "Cuidar do Outro para Cuidar do Mundo", com palestras, mesas-redondas, minicursos e muito mais.</p>
+            <span style="color: red;">Vagas limitadas para atividades presenciais e online</span>
+            <div class="text-center mt-4">
+                <a href="programacao.pdf" class="btn btn-secondary" target="_blank">Baixar Programação Completa (PDF)</a>
             </div>
+        </div> 
+    </div>
+</div>
         </div>
     </div>
 </section>
