--- a/index.html
+++ b/index.html
@@ -105,6 +105,18 @@
                     </div>
                 </div>
             </div>
+          <!-- Novo card para Resultado dos Artigos -->
+            <div class="col-md-4">
+                <div class="card m-3 shadow-sm" style="width: 18rem;">
+                    <div class="card-body text-center" style="color: black;">
+                        <h5 class="card-title">Anais do SEMOC</h5>
+                        <p class="card-text">Os Anais do SEMOC já estão disponíveis! Acesse o link abaixo para conferir todas as publicações do evento.</p>
+                        <div class="text-center mt-4">
+                            <a href="https://ucsal.github.io/semoc/arquivos/anais-semoc-2024-compressed.pdf" class="btn btn-secondary" target="_blank">Acesse os Anais do SEMOC (PDF)</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section> 
